crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/operation_mocked/mockql_core__graphql__mock_directive_extractor__tests__mock_directive_extraction@operation_mocked__without_hint.graphql.snap
---
source: crates/mockql-core/src/graphql/mock_directive_extractor.rs
expression: "match MOCK_DIRECTIVE_EXTRACTOR.extract(&content, operation_name.as_deref())\n{\n    Ok(scenario) => serde_json::to_string_pretty(&scenario).unwrap(),\n    Err(error) => format!(\"{error:?}\"),\n}"
input_file: crates/mockql-core/src/graphql/snapshots/mock_directive_extractor/operation_mocked/without_hint.graphql
---
{
  "type": "OperationMocked",
  "data": {
    "document": "query GetInfo @mock { me { id name } }",
    "hint": null,
    "mocked_fields": []
  }
}
